# tds_project_1

./: .gitignore  Dockerfile  PROMPT.md  README.md  app.code  cli_prompt.txt  course.md  embed.txt  filter_npz.py  filtered_data.json  large_chunks.txt  project-tds-virtual-ta-promptfoo.yaml  pyproject.toml
app/: Dockerfile  __init__.py  concise_answer.py  config.py  embedder.py  image_confext.py  image_context.py  models.py  stella.py  utils.py
app/api/: __init__.py
app/data/: __init__.py  course.py  discourse.py
app/embed/: __init__.py  classifier.py  course.py  discourse.py  split.py  stella.py  utils.py  weighter.py
cli/: __init__.py  embedder.py  image_confext.py  models.py
cli/data/: __init__.py  course.py  discourse.py
cli/embed/: __init__.py  course.py  discourse.py  utils.py
cli/utils/: __init__.py
data/discourse/: topic_161071.json  topic_161072.json  topic_161083.json  topic_161120.json  topic_161214.json  topic_162425.json  topic_163144.json  topic_163147.json  topic_163158.json  topic_163224.json  topic_163241.json  topic_163247.json  topic_163381.json  topic_163765.json  topic_164089.json  topic_164147.json  topic_164205.json  topic_164214.json  topic_164277.json  topic_164291.json  topic_164460.json  topic_164462.json  topic_164737.json  topic_164869.json  topic_165142.json  topic_165396.json  topic_165416.json  topic_165433.json  topic_165593.json  topic_165687.json  topic_165746.json  topic_165830.json  topic_165922.json  topic_165959.json  topic_166100.json  topic_166189.json  topic_166303.json  topic_166349.json  topic_166357.json  topic_166498.json  (+77 more)
discourse/: __init__.py  __init__1.py  __init__2.py  __init__3.py
embeddings_old/: README.npz  _sidebar.npz  actor-network-visualization.npz  archive.npz  base64-encoding.npz  bash.npz  bbc-weather-api-with-python.npz  cleaning-data-with-openrefine.npz  colab.npz  convert-html-to-markdown.npz  convert-pdfs-to-markdown.npz  correlation-with-excel.npz  cors.npz  course.npz  crawling-cli.npz  css-selectors.npz  data-aggregation-in-excel.npz  data-analysis-with-duckdb.npz  data-analysis-with-python.npz  data-analysis-with-sql.npz  data-analysis.npz  data-cleansing-in-excel.npz  data-preparation-in-duckdb.npz  data-preparation-in-the-editor.npz  data-preparation-in-the-shell.npz  data-preparation.npz  data-sourcing.npz  data-storytelling.npz  data-transformation-in-excel.npz  data-visualization-with-seaborn.npz  data-visualization.npz  dbt.npz  deployment-tools.npz  development-tools.npz  devtools.npz  discourse.h5  docker.npz  embeddings.npz  extracting-audio-and-transcripts.npz  fastapi.npz  (+213 more)
test/: project-tds-virtual-ta-q1.webp:Zone.Identifier  tds-virtual-ta-promptfoo.yaml
