[project]
name = "tds-project-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "accelerate>=1.7.0",
    "fastapi>=0.115.12",
    "pydantic>=2.11.5",
    "pydantic-ai>=0.2.12",
    "pydantic-settings>=2.9.1",
    "torch>=2.7.0",
    "transformers>=4.52.4",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.16.0",
    "ruff>=0.11.12",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = ["E722"]
