[project]
name = "tds-project-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "fastapi>=0.115.12",
 "google-generativeai>=0.8.5",
 "h5py>=3.14.0",
 "langchain>=0.3.25",
 "markdownify>=1.1.0",
 "numpy>=2.3.0",
 "openai>=1.82.1",
 "pandas>=2.3.0",
 "pyarrow>=20.0.0",
 "pydantic>=2.11.5",
 "pydantic-ai>=0.2.12",
 "pydantic-settings>=2.9.1",
 "rich-click>=1.8.9",
 "toml>=0.10.2",
]

[dependency-groups]
dev = [
 "black>=25.1.0",
 "debugpy>=1.8.14",
 "isort>=6.0.1",
 "mypy>=1.16.0",
 "ruff>=0.11.12",
 "types-toml>=0.10.8.20240310",
]

[build-system]
requires = [ "setuptools>=61.0", "wheel",]
build-backend = "setuptools.build_meta"

[project.scripts]
cli = "cli:cli"
embed = "cli.embed:cli"
data = "cli.data:cli"

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = [ ".eggs", ".git", ".hg", ".mypy_cache", ".tox", ".venv", "_build", "buck-out", "build", "dist", "data",]

[tool.black]
line-length = 88
target-version = [ "py312",]
extend-exclude = "/(\n  # directories\n  \\.eggs\n  | \\.git\n  | \\.hg\n  | \\.mypy_cache\n  | \\.tox\n  | \\.venv\n  | _build\n  | buck-out\n  | build\n  | dist\n  | data\n)/\n"

[tool.isort]
profile = "black"
line_length = 88
force_single_line = true
split_on_trailing_comma = true
combine_as_imports = false
multi_line_output = 3
known_first_party = [ "cli",]
extend_skip_glob = [ ".eggs/*", ".git/*", ".hg/*", ".mypy_cache/*", ".tox/*", ".venv/*", "_build/*", "buck-out/*", "build/*", "dist/*", "data/*",]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
exclude = [ "^.eggs/", "^.git/", "^.hg/", "^.mypy_cache/", "^.tox/", "^.venv/", "^_build/", "^buck-out/", "^build/", "^dist/", "^data/",]

[tool.ruff.lint]
select = [ "E", "F", "N", "W", "B", "C4", "PIE", "T20", "RET", "SIM", "ARG",]
ignore = [ "E501", "B904", "F404", "F401", "RET507", "PIE790",]

[tool.ruff.lint.isort]
known-first-party = [ "cli",]
force-single-line = true

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "cli*",]
